--- a/web-portal/package.json
+++ b/web-portal/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^8.0.0",
     "@fancyapps/fancybox": "^3.5.7",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-6-social-login": "^1.1.1",
     "bootstrap": "^4.1.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.7",
@@ -34,6 +35,7 @@
     "ionicons": "^4.5.8",
     "jquery": "^3.4.1",
     "ng5-slider": "^1.2.4",
+    "ngx-disqus": "^2.4.3",
     "ngx-slick": "^0.2.1",
     "ngx-toastr": "^11.2.1",
     "popper.js": "^1.15.0",
