--- a/server/composer.json
+++ b/server/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "~3.3",
         "intervention/image": "^2.5",
         "laravel/framework": "5.5.*",
