--- a/server/composer.json
+++ b/server/composer.json
@@ -9,13 +9,13 @@
         "barryvdh/laravel-cors": "^0.11.4",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "~3.3",
+        "fzaninotto/faker": "^1.9",
         "intervention/image": "^2.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
